[package]
name = "cvtek"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.29", features = ["derive"] }
indexmap = { version = "1.9.2", features = ["serde"] }
once_cell = "1.17.0"
rust-embed = "6.4.2"
serde = { version = "1.0.151", features = ["derive"] }
tera = { version="1.17.1", features = ["preserve_order"]}
toml = { version = "0.5.10", features = ["preserve_order"]}
